--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 # misc
 .DS_Store
 .env.local
+.env.development
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
