--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
     "classnames": "^2.3.2",
+    "env-cmd": "^10.1.0",
     "jquery": "^3.7.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -29,6 +30,8 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
+    "start:qa": "env-cmd -f .env.qa react-app-rewired start",
+    "start:prod": "env-cmd -f .env.production react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
