--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "classnames": "^2.3.2",
     "env-cmd": "^10.1.0",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-persist-expire": "^1.1.1",
