--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "start:qa": "env-cmd -f .env.qa react-app-rewired start",
+    "start:dev": "env-cmd -f .env.development react-app-rewired start",
     "start:prod": "env-cmd -f .env.production react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
